<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MiAu</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum.</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_a_senha">Esqueceu a Senha?</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="perfil">Meu Perfil</string>
    <string name="meus_bichinhos">Meus Bichinhos</string>
    <string name="lembretes">Lembretes</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="vacinacao_all">Depois do primeiro ano, o animal é vacinado anualmente com uma dose de cada vacina - V8 ou V10, Gripe Canina, Giárdia e Anti-rábica. A melhor maneira de organizar o calendário de imunização é fazendo todas as vacinas em uma mesma data que deve ser repetida anualmente.</string>
</resources>
