<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/app_love_background_branco">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:paddingTop="15dp"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways">
            <TextView
                android:text="Pet Love"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:textSize="25dp"
                android:autoText="false" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="80dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/petlove_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/icon_nome_cadastro"
                android:layout_gravity="center_vertical" />
            <EditText
                android:id="@+id/usuario"
                android:hint="@string/usuario"
                android:layout_width="match_parent"
                android:textColorHint="@android:color/background_dark"
                android:textColor="@android:color/background_dark"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_gravity="bottom"
                android:gravity="bottom" />
            <requestFocus />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/icon_senha_cadastro"
                android:layout_gravity="center_vertical" />
            <EditText
                android:id="@+id/senha"
                android:hint="@string/senha"
                android:textColorHint="@android:color/background_dark"
                android:textColor="@android:color/background_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="false"
                android:textColorLink="@android:color/background_dark"
                android:textColorHighlight="@android:color/background_dark"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:textColor="@android:color/background_dark"
            android:layout_gravity="center_horizontal"
            android:text="@string/esqueceu_a_senha"
            android:gravity="right" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/entrar"
            android:textColor="@android:color/background_dark"
            android:id="@+id/button"
            android:background="@drawable/custom_button"
            android:layout_gravity="center_horizontal"
            android:onClick="onEntrarClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/background_dark"
            android:text="Ou Entre Com"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/icon_facebook_cadastro"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/icon_google_login"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/cadastrar"
        android:id="@+id/button2"
        android:background="#eeeeee"
        android:layout_gravity="center_horizontal"
        android:onClick="onCadastrarClick" />


</RelativeLayout>
